@@ -1,3 +1,4 @@
+- (2018-12-19) Fixes to prevent 500 errors, if source isn't present
 - (2018-06-15) Removed finalize! from payment, because it fails
 - (2018-06-15) Migated to spree 3.5
 - (2018-04-23) Fix for crash undefined method `state_callback' 'for'
